--- a/public/css/results.css
+++ b/public/css/results.css
@@ -2,26 +2,22 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
   text-align: center;
   line-height: 1.5;
   background: linear-gradient(to right, #237A57, #093028);
+  overflow-y: auto;
 }
 
 h1 {
   font-size: 36px;
   margin-bottom: 20px;
-  color: #000000;
+  color: white;
 }
 
 h2 {
   font-size: 28px;
   margin-bottom: 10px;
-  color: #000000;
+  color: white;
 }
 
 h3 {
@@ -39,9 +35,8 @@ p {
 .container {
   max-width: 900px;
   margin: 0 auto;
-  overflow: auto;
-  overflow-x: auto;
   overflow-y: auto;
+  height: auto;
   text-align: center;
 }
 
@@ -54,7 +49,8 @@ p {
 }
 
 .container::-webkit-scrollbar-thumb {
-  background-color: transparent;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 4px;
 }
 
 .question-result {
